Fix footer on mobile display and links footer
Took 12 minutes

--- a/assets/styles/components.css
+++ b/assets/styles/components.css
@@ -165,6 +165,11 @@
                 list-style: none;
                 width: 100%;
 
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+
                 li {
                     display: inline;
                     padding: 5px 0;
@@ -229,6 +234,33 @@
             a {
                 color: #495867;
                 text-decoration: none;
+            }
+        }
+    }
+
+    #footer {
+        .content {
+            #footer-links {
+                ul {
+                    list-style: disc;
+                    flex-direction: column;
+
+                    li {
+                        display: block;
+
+                        &:not(:last-child):after {
+                            content: " •";
+                        }
+
+                        &:last-child:after {
+                            content: " •";
+                        }
+
+                        &:before {
+                            content: "• ";
+                        }
+                    }
+                }
             }
         }
     }
